feat: add endpoints for internationalization
